2014-11-05  c.hetherington  <cth@carlh.net>

	* Add a couple of new hints.

2014-11-04  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.10 released.

2014-11-04  c.hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2014-11-03  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.9 released.

2014-10-31  Carl Hetherington  <cth@carlh.net>

	* Fix for hangs at 99% when encoding
	trimmed content.

2014-11-02  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.8 released.

2014-11-02  Carl Hetherington  <cth@carlh.net>

	* Be more tolerant of some FFmpeg audio decoding errors;
	should fix #352.

2014-10-26  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.7 released.

2014-10-24  Carl Hetherington  <cth@carlh.net>

	* Add a pause button for jobs.

	* Experimental support for bypassing colourspace conversion (#266).

	* Version 1.76.6 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.5 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.4 released.

2014-10-23  Carl Hetherington  <cth@carlh.net>

	* Rename 'Add folder' to 'Add image sequence'
	and add some tooltips.

	* Move the "keep video in sequence" button into
	the timeline dialogue.

	* Fix mix-placement of content when using the "Down"
	button to move it.

2014-10-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.3 released.

2014-10-22  Carl Hetherington  <cth@carlh.net>

	* Fix bug where some files from iTunes would
	be read as being at 90,000fps.

2014-10-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.76.2 released.

2014-10-19  Carl Hetherington  <cth@carlh.net>

	* Add simple note of what audio resampling
	will be done to the audio panel.

2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.2 released.

2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.1 released.

2014-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.75.0 released.

2014-10-14  Carl Hetherington  <cth@carlh.net>
