@@ -133,10 +133,6 @@ public:
 		return _default_still_length;
 	}
 
-	VideoContentScale default_scale () const {
-		return _default_scale;
-	}
-
 	Ratio const * default_container () const {
 		return _default_container;
 	}
@@ -294,11 +290,6 @@ public:
 		changed ();
 	}
 
-	void set_default_scale (VideoContentScale s) {
-		_default_scale = s;
-		changed ();
-	}
-
 	void set_default_container (Ratio const * c) {
 		_default_container = c;
 		changed ();
@@ -442,7 +433,6 @@ private:
 	ISDCFMetadata _default_isdcf_metadata;
 	boost::optional<std::string> _language;
 	int _default_still_length;
-	VideoContentScale _default_scale;
 	Ratio const * _default_container;
 	DCPContentType const * _default_dcp_content_type;
 	std::string _dcp_issuer;
