@@ -137,6 +137,11 @@ public:
 		return _colour_conversion;
 	}
 
+	boost::optional<float> sample_aspect_ratio () const {
+		boost::mutex::scoped_lock lm (_mutex);
+		return _sample_aspect_ratio;
+	}
+
 	libdcp::Size video_size_after_3d_split () const;
 	libdcp::Size video_size_after_crop () const;
 
@@ -165,6 +170,10 @@ private:
 	Crop _crop;
 	VideoContentScale _scale;
 	boost::optional<ColourConversion> _colour_conversion;
+	/** Sample aspect ratio obtained from the content file's header,
+	    if there is one.
+	*/
+	boost::optional<float> _sample_aspect_ratio;
 };
 
 #endif
