@@ -1,3 +1,9 @@
+2014-11-07  Carl Hetherington  <cth@carlh.net>
+
+	* Guess initial scale from the size of video
+	content images, taking pixel aspect ratio into
+	account where possible.
+
 2014-11-05  c.hetherington  <cth@carlh.net>
 
 	* Add a couple of new hints.
